update: chat - Contact - Fix scrollbar for container #WTHZONE-874

--- a/src/contact/app.component.scss
+++ b/src/contact/app.component.scss
@@ -1,7 +1,10 @@
 @import '../assets/styles/global';
 
-.main-page-body {
-  padding-bottom: 50px;
+.main-page-body .page-body-content.has-page-body-control {
+  height: calc(100vh - #{$header-height} - #{$page-body-control-height});
+  @include flexbox;
+  @include flex-direction(column);
+  overflow: auto;
 }
 
 @media (max-width: $screen-xs-max) {
