--- a/src/contact/shared/list/list.component.scss
+++ b/src/contact/shared/list/list.component.scss
@@ -102,7 +102,7 @@
 .contact-bar {
   @include center(false, true);
   position: fixed;
-  right: 0;
+  right: 15px;
   left: auto;
   a {
     display: block;
